fix bar gauge EuiToolTip overflow (#12127)

--- a/src/plugins/explore/public/components/visualizations/bar_gauge/bar_gauge_component.scss
+++ b/src/plugins/explore/public/components/visualizations/bar_gauge/bar_gauge_component.scss
@@ -24,7 +24,14 @@ $bar-gauge-radius: 2px;
 .bar-gauge-item-tooltip {
   flex: 1;
   display: flex;
-  min-width: 0;
+
+  .vertical & {
+    min-width: 40px;
+  }
+
+  .horizontal & {
+    min-height: 24px;
+  }
 }
 
 // bar gauge item
